syntax = "proto3";
package text;

message TextDocumentAddResponse {
    int64 request_id = 1;
    string document_id = 2;
    float created_at = 3;
}